fix titles align in mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,7 +485,11 @@ margin: auto;
 }
 
 .navbar img{
-  width: 60px;
+  width: 50px;
+}
+
+.navbar-nav .nav-item{
+  padding: 0;
 }
 
 
@@ -680,6 +684,7 @@ width: 100%;
 
 .band-item{
   width: 50%;
+  border: 1px solid #80808040;
 }
 
 
@@ -690,6 +695,10 @@ width: 100%;
 
 .works-banner .text{
   margin-top: 10%;
+}
+
+.works-banner .text h1{
+  text-align: center;
 }
 
 .works-banner img{
